--- a/support.html
+++ b/support.html
@@ -71,7 +71,7 @@
 									</li>
 									<li>
 										<div class="figure figure-thumb">
-											<a href="https://www.up3d.com/?r=plus"><img src="/upload/static/printer3.png"
+											<a href="https://www.up3d.com/?r=plus"><img src="https://www.up3d.com/upload/static/printer3.png"
 												alt="UP Plus" width="160" style="height: 90px;"></a>
 										</div>
 										<div class="title">
@@ -83,7 +83,7 @@
 									<li>
 										<div class="figure figure-thumb">
 											<a href="https://www.up3d.com/?r=mini"><img
-												src="/upload/static/printer2.png" alt="UP mini " width="160"></a>
+												src="https://www.up3d.com/upload/static/printer2.png" alt="UP mini " width="160"></a>
 										</div>
 										<div class="title">
 											<a href="https://www.up3d.com/?r=mini">UPmini </a>
@@ -92,7 +92,7 @@
 									</li>
 									<li>
 										<div class="figure figure-thumb">
-											<a href="https://www.up3d.com/?r=up"><img src="/upload/static/printer1.png"
+											<a href="https://www.up3d.com/?r=up"><img src="https://www.up3d.com/upload/static/printer1.png"
 												alt="UP BOX " width="160"></a>
 										</div>
 										<div class="title">
