--- a/support_cn.html
+++ b/support_cn.html
@@ -104,7 +104,7 @@
 							class="text">Store </span><span class="arrow"></span></a></li>
 					<li class="nav-item"><a class="link" href="https://www.up3d.com/community/"><span
 							class="text">Forum</span><span class="arrow"></span></a></li>
-					<li class="nav-item"><a class="link" href="https://www.up3d.com/?r=support"><span
+					<li class="nav-item"><a class="link" href=""><span
 							class="text">Support</span><span class="arrow"></span></a></li>
 					<li class="nav-item"><a class="link" href="https://www.up3d.com/blog/"><span
 							class="text">Blog</span><span class="arrow"></span></a></li>
@@ -387,10 +387,10 @@
 				<dl class="col-links ">
 					<dt>Support</dt>
 					<dd>
-						<a href="https://www.up3d.com/?r=support">Contact Support </a>
+						<a href="">Contact Support </a>
 					</dd>
 					<dd>
-						<a href="https://www.up3d.com/?r=support/download">Software Download</a>
+						<a href="http://up3d-dev.github.io/download_cn.html">Software Download</a>
 					</dd>
 					<dd>
 						<a href="https://www.up3d.com/wiki/">FAQ</a>
