--- a/support.html
+++ b/support.html
@@ -243,6 +243,16 @@
 					<div class="doclist" id="macdownloadlist">
 						<li><div class="txt">
 								<a target=_blank
+									href="https://itunes.apple.com/cn/app/up-studio/id1119477741?mt=12">UP
+									Studio For MAC OSX Version:1.0.0.1</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/mac/UP_Studio_Beta.0.0.0.10.dmg"><img
+									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/mac/UP_Studio_Beta.0.0.0.10.dmg">UP
 									Studio For MAC OSX Beta Version:0.0.0.10</a>
 							</div>
