--- a/download_cn.html
+++ b/download_cn.html
@@ -254,7 +254,7 @@
 							</div>
 							<div class="ico">
 								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/mac/UP_Studio_Beta.0.0.0.10.dmg"><img
+									href="https://itunes.apple.com/cn/app/up-studio/id1119477741?mt=12"><img
 									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
