add iPhone and iPad download link.

--- a/support_cn.html
+++ b/support_cn.html
@@ -289,12 +289,8 @@
 
 					</div>
 					<div class="doclist" id="appdownloadlist">
-						<li><a><img
-								src="https://cn.up3d.com/resource/images/app_ios.png"
-								class="appdown" title="Comming very soon!"></a></li>
-						<li><a><img
-								src="https://cn.up3d.com/resource/images/app_andriond.png"
-								width="200" height="50" class="appdown" title="Comming Soon"></a></li>
+						<li><a target="_blank" href="https://itunes.apple.com/cn/app/up-studio/id1099048453?mt=8"><img src="https://cn.up3d.com/resource/images/app_iphone.png" class="appdown" title="Up Studio 1.0.1"></a></li>
+						<li><a target="_blank" href="https://itunes.apple.com/cn/app/up-studio-hd/id1124372166?mt=8"><img src="https://cn.up3d.com/resource/images/app_ipad.png" width="200" height="50" class="appdown" title="Up Studio 1.0.1"></a></li>
 					</div>
 
 				</div>
