add QR-Code for App download.

--- a/download.html
+++ b/download.html
@@ -306,8 +306,8 @@
 
 					</div>
 					<div class="doclist" id="appdownloadlist">
-						<li><a target="_blank" href="https://itunes.apple.com/cn/app/up-studio/id1099048453?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_iphone.png" class="appdown" title="Up Studio 1.0.1"></a></li>
-						<li><a target="_blank" href="https://itunes.apple.com/cn/app/up-studio-hd/id1124372166?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_ipad.png" width="200" height="50" class="appdown" title="Up Studio 1.0.1"></a></li>
+						<li><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/iPhone_download_url.png" class="appdown" title="Up Studio 1.0.1"><a target="_blank" href="https://itunes.apple.com/cn/app/up-studio/id1099048453?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_iphone.png" class="appdown" title="Up Studio 1.0.1"></a></li>
+						<li><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/iPad_download_url.png" class="appdown" title="Up Studio 1.0.1"><a target="_blank" href="https://itunes.apple.com/cn/app/up-studio-hd/id1124372166?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_ipad.png" width="200" height="50" class="appdown" title="Up Studio 1.0.1"></a></li>
 					</div>
 
 				</div>
