--- a/support.html
+++ b/support.html
@@ -227,10 +227,8 @@
 									href="http://up3d-dev.github.io/downloads/desktop/win/5-150430160410.zip"><img
 									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
 							</div></li>
-						<!-- 
                     <li><div class="txt"><a target=_blank href="http://up3d-dev.github.io/downloads/desktop/win/UP2.13 setup.exe">UP! Installation Executable For Windows    Version:2.13</a> </div><div class="ico" ><a target=_blank href="http://up3d-dev.github.io/downloads/desktop/win/UP2.13 setup.exe"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"  ></a></div>  </li>
                     <li><div class="txt"><a target=_blank href="http://up3d-dev.github.io/downloads/desktop/win/UP212setup.exe">UP! Installation Executable For Windows    Version:2.12</a> </div><div class="ico" ><a target=_blank href="http://up3d-dev.github.io/downloads/desktop/win/UP212setup.exe"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"  ></a></div>  </li>
-                     -->
 					</div>
 
 				</div>
@@ -292,8 +290,8 @@
 
 					</div>
 					<div class="doclist" id="appdownloadlist">
-						<li><a target="_blank" href="https://itunes.apple.com/cn/app/up-studio/id1099048453?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_iphone.png" class="appdown" title="Up Studio 1.0.1"></a></li>
-						<li><a target="_blank" href="https://itunes.apple.com/cn/app/up-studio-hd/id1124372166?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_ipad.png" width="200" height="50" class="appdown" title="Up Studio 1.0.1"></a></li>
+						<li><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/iPhone_download_url.png" class="appdown" title="Up Studio 1.0.1"><a target="_blank" href="https://itunes.apple.com/cn/app/up-studio/id1099048453?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_iphone.png" class="appdown" title="Up Studio 1.0.1"></a></li>
+						<li><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/iPad_download_url.png" class="appdown" title="Up Studio 1.0.1"><a target="_blank" href="https://itunes.apple.com/cn/app/up-studio-hd/id1124372166?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_ipad.png" width="200" height="50" class="appdown" title="Up Studio 1.0.1"></a></li>
 					</div>
 
 				</div>
