--- a/download.html
+++ b/download.html
@@ -147,6 +147,26 @@
 					<div class="doclist" id="windownloadlist">
 						<li><div class="txt">
 								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.1.0.4_x64.zip">UP
+									Studio For Windows x64 Version:1.1.0.4</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.1.0.4_x64.zip"><img
+									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.1.0.4_x86.zip">UP
+									Studio For Windows x86 Version:1.1.0.4</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.1.0.4_x86.zip"><img
+									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.0.0.0_x64.zip">UP
 									Studio For Windows x64 Version:1.0.0.0</a>
 							</div>
