--- a/download.html
+++ b/download.html
@@ -278,7 +278,7 @@
 						<li><div class="txt">
 								<a target=_blank
 									href="https://itunes.apple.com/cn/app/up-studio/id1119477741?mt=12">UP
-									Studio For MAC OSX Version:1.0.0.1</a>
+									Studio For MAC OSX</a>
 							</div>
 							<div class="ico">
 								<a target=_blank
