Add mini 2 user manual.

--- a/support_cn.html
+++ b/support_cn.html
@@ -305,6 +305,16 @@
 					<div class="doclist" id="docdownloadlist">
 						<li><div class="txt">
 								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/docs/UP_mini2_User_Manual.pdf">UP
+									Mini 2 Manual - English</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/docs/UP_mini2_User_Manual.pdf"><img
+									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/docs/UP BOX Manual 4.7.1 ENG.pdf">UP
 									BOX Manual - English(V4.7.1)</a>
 							</div>
@@ -336,7 +346,7 @@
 						<li><div class="txt">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/docs/UP mini User Manual Eng.pdf">UP
-									mini User Manual - English(V4.6.23)</a>
+									Mini User Manual - English(V4.6.23)</a>
 							</div>
 							<div class="ico">
 								<a target=_blank
@@ -367,7 +377,7 @@
 						<li><div class="txt">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/docs/UP!-mini-User-Manual-V1.0.rar">UP
-									mini User Manual-V1.0</a>
+									Mini User Manual-V1.0</a>
 							</div>
 							<div class="ico">
 								<a target=_blank
