--- a/download.html
+++ b/download.html
@@ -359,6 +359,13 @@
 					</div>
 					<div class="doclist" id="docdownloadlist">
 						<li><div class="txt">
+								<a target=_blank href="http://up3d-dev.github.io/downloads/docs/UP_BOX+_Manual_4.8_EN.pdf">UP Box+ Manual 4.8 - English</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="http://up3d-dev.github.io/downloads/docs/UP_BOX+_Manual_4.8_EN.pdf"><img	src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div>
+						</li>
+						<li><div class="txt">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/docs/UP_mini2_User_Manual.pdf">UP
 									Mini 2 Manual - English</a>
