--- a/support.html
+++ b/support.html
@@ -16,9 +16,9 @@
 <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="PUBLIC">
 <META NAME="Copyright" CONTENT="UP3D">
 <META NAME="distribution" CONTENT="Global">
-<meta name=“msvalidate.01” content=“256BF56AF17FE1CF017760CE82BC160E” />
-<meta name=“google-site-verification”
-	content=“sKJgEU9dCMdk4SnrsyE8Ze8T-uD0wK-Obo_1iju3OVc” />
+<meta name="msvalidate.01" content="256BF56AF17FE1CF017760CE82BC160E" />
+<meta name="google-site-verification"
+	content="sKJgEU9dCMdk4SnrsyE8Ze8T-uD0wK-Obo_1iju3OVc" />
 <link rel="icon" type="image/x-icon"
 	href="https://d1wbqe76zurb5f.cloudfront.net/resource/images/favicon.ico" />
 <link href="https://d1wbqe76zurb5f.cloudfront.net/resource/css/base.css"
@@ -149,6 +149,26 @@
 					<div class="doclist" id="windownloadlist">
 						<li><div class="txt">
 								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.2.1.6_x64.zip">UP
+									Studio For Windows x64 Version:1.2.1.6</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.2.1.6_x64.zip"><img
+									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.2.1.6_x86.zip">UP
+									Studio For Windows x86 Version:1.2.1.6</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.2.1.6_x86.zip"><img
+									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.1.2.0_x64.zip">UP
 									Studio For Windows x64 Version:1.1.2.0</a>
 							</div>
@@ -207,36 +227,7 @@
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.0.0.0_x86.zip"><img
 									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
 							</div></li>
-						<li><div class="txt">
-								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_Beta_0.0.0.10_x64.zip">UP
-									Studio For Windows x86_64 Beta Version:0.0.0.10</a>
-							</div>
-							<div class="ico">
-								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_Beta_0.0.0.10_x64.zip"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
-							</div></li>
-						<li><div class="txt">
-								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_Beta_0.0.0.10_x86.zip">UP
-									Studio For Windows x86 Beta Version:0.0.0.10</a>
-							</div>
-							<div class="ico">
-								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_Beta_0.0.0.10_x86.zip"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
-							</div></li>
-						<li><div class="txt">
-								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_Beta_0.0.0.9.exe">UP
-									Studio For Windows Beta Version:0.0.0.9</a>
-							</div>
-							<div class="ico">
-								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_Beta_0.0.0.9.exe"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
-							</div></li>
+						
 						<li><div class="txt">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP2.18 setup.exe">UP!
@@ -289,16 +280,7 @@
 									href="https://itunes.apple.com/cn/app/up-studio/id1119477741?mt=12"><img
 									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
 							</div></li>
-						<li><div class="txt">
-								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/mac/UP_Studio_Beta.0.0.0.10.dmg">UP
-									Studio For MAC OSX Beta Version:0.0.0.10</a>
-							</div>
-							<div class="ico">
-								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/mac/UP_Studio_Beta.0.0.0.10.dmg"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
-							</div></li>
+						
 						<li><div class="txt">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/mac/5-15042F94231.zip">UP
