Change iOS download link.

--- a/support.html
+++ b/support.html
@@ -312,8 +312,8 @@
 
 					</div>
 					<div class="doclist" id="appdownloadlist">
-						<li><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/iPhone_download_url.png" class="appdown" title="Up Studio 1.0.1"><a target="_blank" href="https://itunes.apple.com/cn/app/up-studio/id1099048453?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_iphone.png" class="appdown" title="Up Studio 1.0.1"></a></li>
-						<li><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/iPad_download_url.png" class="appdown" title="Up Studio 1.0.1"><a target="_blank" href="https://itunes.apple.com/cn/app/up-studio-hd/id1124372166?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_ipad.png" width="200" height="50" class="appdown" title="Up Studio 1.0.1"></a></li>
+						<li><img src="images/ios/iPhone_EN.png" width="200px" class="appdown" title="Up Studio for iPhone"><a target="_blank" href="https://itunes.apple.com/app/up-studio/id1099048453?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_iphone.png" class="appdown" title="Up Studio for iPhone"></a></li>
+						<li><img src="images/ios/iPad_EN.png" width="200px" class="appdown" title="Up Studio for iPad"><a target="_blank" href="https://itunes.apple.com/app/up-studio-hd/id1124372166?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_ipad.png" class="appdown" title="Up Studio for iPad"></a></li>
 					</div>
 
 				</div>
