change Up to UP.

--- a/download_cn.html
+++ b/download_cn.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <title>Resource Download | UP3D</title>
 <META NAME="author" CONTENT="UP3D">
-<META NAME="subject" CONTENT="3D Printer,Up3d">
+<META NAME="subject" CONTENT="3D Printer,UP3d">
 <META NAME="Description"
 	CONTENT="With constantly innovation, UP series desktop 3D printer by Tiertime manufacturing the easiest setup, simple to use and most affordable 3D Printer for everyone.">
 <META NAME="Classification"
@@ -319,8 +319,8 @@
 
 					</div>
 					<div class="doclist" id="appdownloadlist">
-						<li><img src="images/ios/iPhone_EN.png" width="200px" class="appdown" title="Up Studio for iPhone"><a target="_blank" href="https://itunes.apple.com/app/up-studio/id1099048453?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_iphone.png" class="appdown" title="Up Studio for iPhone"></a></li>
-						<li><img src="images/ios/iPad_EN.png" width="200px" class="appdown" title="Up Studio for iPad"><a target="_blank" href="https://itunes.apple.com/app/up-studio-hd/id1124372166?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_ipad.png" class="appdown" title="Up Studio for iPad"></a></li>
+						<li><img src="images/ios/iPhone_EN.png" width="200px" class="appdown" title="UP Studio for iPhone"><a target="_blank" href="https://itunes.apple.com/app/up-studio/id1099048453?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_iphone.png" class="appdown" title="UP Studio for iPhone"></a></li>
+						<li><img src="images/ios/iPad_EN.png" width="200px" class="appdown" title="UP Studio for iPad"><a target="_blank" href="https://itunes.apple.com/app/up-studio-hd/id1124372166?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_ipad.png" class="appdown" title="UP Studio for iPad"></a></li>
 					</div>
 
 				</div>
