--- a/download.html
+++ b/download.html
@@ -146,6 +146,26 @@
 					<div class="doclist" id="windownloadlist">
 						<li><div class="txt">
 								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Installer_x64.1.3.2.2.zip">UP
+									Studio For Windows x64 Version:1.3.2.2</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Installer_x64.1.3.2.2.zip"><img
+									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Installer_x86.1.3.2.2.zip">UP
+									Studio For Windows x86 Version:1.3.2.2</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Installer_x86.1.3.2.2.zip"><img
+									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.2.1.6_x64.zip">UP
 									Studio For Windows x64 Version:1.2.1.6</a>
 							</div>
