--- a/support_cn.html
+++ b/support_cn.html
@@ -150,13 +150,33 @@
 					<div class="doclist" id="windownloadlist">
 						<li><div class="txt">
 								<a target=_blank
+									href="https://cn.up3d.com/downloads/UP_Installer_x64.1.3.2.3.zip">UP
+									Studio For Windows x64 Version:1.3.2.3</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="https://cn.up3d.com/downloads/UP_Installer_x64.1.3.2.3.zip"><img
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Installer_x86.1.3.2.3.zip">UP
+									Studio For Windows x86 Version:1.3.2.3</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Installer_x86.1.3.2.3.zip"><img
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Installer_x64.1.3.2.2.zip">UP
 									Studio For Windows x64 Version:1.3.2.2</a>
 							</div>
 							<div class="ico">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Installer_x64.1.3.2.2.zip"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 							<li><div class="txt">
 								<a target=_blank
@@ -166,7 +186,7 @@
 							<div class="ico">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Installer_x86.1.3.2.2.zip"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
 								<a target=_blank
@@ -176,7 +196,7 @@
 							<div class="ico">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.2.1.6_x64.zip"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 							<li><div class="txt">
 								<a target=_blank
@@ -186,7 +206,7 @@
 							<div class="ico">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.2.1.6_x86.zip"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
 								<a target=_blank
@@ -196,7 +216,7 @@
 							<div class="ico">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.1.2.0_x64.zip"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 							<li><div class="txt">
 								<a target=_blank
@@ -206,7 +226,7 @@
 							<div class="ico">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.1.2.0_x86.zip"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
 								<a target=_blank
@@ -216,7 +236,7 @@
 							<div class="ico">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.0.0.4_x64.zip"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 							<li><div class="txt">
 								<a target=_blank
@@ -226,7 +246,7 @@
 							<div class="ico">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.0.0.4_x86.zip"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
 								<a target=_blank
@@ -236,7 +256,7 @@
 							<div class="ico">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.0.0.0_x64.zip"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 							<li><div class="txt">
 								<a target=_blank
@@ -246,7 +266,7 @@
 							<div class="ico">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Studio_1.0.0.0_x86.zip"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
 								<a target=_blank
@@ -298,7 +318,7 @@
 							<div class="ico">
 								<a target=_blank
 									href="https://itunes.apple.com/cn/app/up-studio/id1119477741?mt=12"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 						
 						<li><div class="txt">
@@ -332,8 +352,8 @@
 
 					</div>
 					<div class="doclist" id="appdownloadlist">
-						<li><img src="images/ios/iPhone_EN.png" width="200px" class="appdown" title="UP Studio for iPhone"><a target="_blank" href="https://itunes.apple.com/app/up-studio/id1099048453?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_iphone.png" class="appdown" title="UP Studio for iPhone"></a></li>
-						<li><img src="images/ios/iPad_EN.png" width="200px" class="appdown" title="UP Studio for iPad"><a target="_blank" href="https://itunes.apple.com/app/up-studio-hd/id1124372166?mt=8"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/app_ipad.png" class="appdown" title="UP Studio for iPad"></a></li>
+						<li><img src="images/ios/iPhone_EN.png" width="200px" class="appdown" title="UP Studio for iPhone"><a target="_blank" href="https://itunes.apple.com/app/up-studio/id1099048453?mt=8"><img src="https://cn.up3d.com/resource/images/app_iphone.png" class="appdown" title="UP Studio for iPhone"></a></li>
+						<li><img src="images/ios/iPad_EN.png" width="200px" class="appdown" title="UP Studio for iPad"><a target="_blank" href="https://itunes.apple.com/app/up-studio-hd/id1124372166?mt=8"><img src="https://cn.up3d.com/resource/images/app_ipad.png" class="appdown" title="UP Studio for iPad"></a></li>
 					</div>
 
 				</div>
@@ -348,7 +368,7 @@
 								<a target=_blank href="http://up3d-dev.github.io/downloads/docs/UP_BOX+_Manual_4.8_EN.pdf">UP Box+ Manual 4.8 - English</a>
 							</div>
 							<div class="ico">
-								<a target=_blank href="http://up3d-dev.github.io/downloads/docs/UP_BOX+_Manual_4.8_EN.pdf"><img	src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+								<a target=_blank href="http://up3d-dev.github.io/downloads/docs/UP_BOX+_Manual_4.8_EN.pdf"><img	src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div>
 						</li>
 						<li><div class="txt">
@@ -359,7 +379,7 @@
 							<div class="ico">
 								<a target=_blank
 									href="http://up3d-dev.github.io/downloads/docs/UP_mini2_User_Manual.pdf"><img
-									src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
 								<a target=_blank
