--- a/support_cn.html
+++ b/support_cn.html
@@ -150,6 +150,26 @@
 					<div class="doclist" id="windownloadlist">
 						<li><div class="txt">
 								<a target=_blank
+									href="https://cn.up3d.com/downloads/UP_Installer_x64.1.3.2.4.zip">UP
+									Studio For Windows x64 Version:1.3.2.4</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="https://cn.up3d.com/downloads/UP_Installer_x64.1.3.2.4.zip"><img
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Installer_x86.1.3.2.4.zip">UP
+									Studio For Windows x86 Version:1.3.2.4</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="http://up3d-dev.github.io/downloads/desktop/win/UP_Installer_x86.1.3.2.4.zip"><img
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank
 									href="https://cn.up3d.com/downloads/UP_Installer_x64.1.3.2.3.zip">UP
 									Studio For Windows x64 Version:1.3.2.3</a>
 							</div>
