--- a/download_cn.html
+++ b/download_cn.html
@@ -394,6 +394,13 @@
 					</div>
 					<div class="doclist" id="docdownloadlist">
 						<li><div class="txt">
+								<a target=_blank href="http://up3d-dev.github.io/downloads/docs/UP_3D_Printer_Wi-Fi_Upgrade_Guide_en.pdf">UP 3D Printer Wi-Fi Upgrade Guide</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="http://up3d-dev.github.io/downloads/docs/UP_3D_Printer_Wi-Fi_Upgrade_Guide_en.pdf"><img	src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div>
+						</li>
+						<li><div class="txt">
 								<a target=_blank href="http://up3d-dev.github.io/downloads/docs/UP_BOX+_Manual_4.8_EN.pdf">UP Box+ Manual 4.8 - English</a>
 							</div>
 							<div class="ico">
