--- a/download_cn.html
+++ b/download_cn.html
@@ -138,6 +138,26 @@
 					<div class="doclist" id="windownloadlist">
 						<li><div class="txt">
 								<a target=_blank
+									href="https://cn.up3d.com/downloads/UP_Studio_x64_1.4.2.1.zip">UP
+									Studio For Windows x64 Version:1.4.2.1</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="https://cn.up3d.com/downloads/UP_Studio_x64_1.4.2.1.zip"><img
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank
+									href="https://cn.up3d.com/downloads/UP_Studio_x86_1.4.2.1.zip">UP
+									Studio For Windows x86 Version:1.4.2.1</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="https://cn.up3d.com/downloads/UP_Studio_x86_1.4.2.1.zip"><img
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank
 									href="https://cn.up3d.com/downloads/UP_Studio_x64_1.4.1.3.zip">UP
 									Studio For Windows x64 Version:1.4.1.3</a>
 							</div>
