add box+ in navbar.

--- a/download_cn.html
+++ b/download_cn.html
@@ -53,50 +53,23 @@
 						<div class="header-nav-menu" style="display: none;">
 							<div class="container">
 								<ul class="children-list clearfix">
-									<li class="first">
-										<div class="figure figure-thumb">
-											<a href="https://www.up3d.com/?r=mini2"><img
-												src="https://cn.up3d.com/resource/product/3dprint/upmini2/images/mini2-606x360.png"
-												alt="UPmini 2 " width="160" style="height: 90px;"></a>
-										</div>
-										<div class="title">
-											<a href="https://www.up3d.com/?r=mini2">UPmini 2 </a>
-										</div>
-
-									</li>
-									<li>
-										<div class="figure figure-thumb">
-											<a href="https://www.up3d.com/?r=plus"><img src="https://www.up3d.com/upload/static/printer3.png"
-												alt="UP Plus" width="160" style="height: 90px;"></a>
-										</div>
-										<div class="title">
-											<a href="https://www.up3d.com/?r=plus">UP Plus2 </a>
-										</div>
-
-									</li>
-
-									<li>
-										<div class="figure figure-thumb">
-											<a href="https://www.up3d.com/?r=mini"><img
-												src="https://www.up3d.com/upload/static/printer2.png" alt="UP mini " width="160"></a>
-										</div>
-										<div class="title">
-											<a href="https://www.up3d.com/?r=mini">UPmini </a>
-										</div>
-
-									</li>
-									<li>
-										<div class="figure figure-thumb">
-											<a href="https://www.up3d.com/?r=up"><img src="https://www.up3d.com/upload/static/printer1.png"
-												alt="UP BOX " width="160"></a>
-										</div>
-										<div class="title">
-											<a href="https://www.up3d.com/?r=up">UP BOX </a>
-										</div>
-
-									</li>
-
-								</ul>
+                                        <li class="first">
+                                            <div class="figure figure-thumb"> <a href="https://www.up3d.com/?r=upboxplus"  ><img src="https://cn.up3d.com/resource/product/3dprint/upbox-plus/images/upbox+606x340.png"   alt="UP BOX " width="160"></a> </div>
+                                            <div class="title"><a href="https://www.up3d.com/?r=upboxplus"  >UP BOX+ </a></div>
+                                        </li>
+                                        <li >
+                                            <div class="figure figure-thumb"> <a href="https://www.up3d.com/?r=mini2"><img src="https://cn.up3d.com/resource/product/3dprint/upmini2/images/mini2-606x360.png"   alt="UPmini 2 " width="160" style="height:90px;" ></a> </div>
+                                            <div class="title"><a href="https://www.up3d.com/?r=mini2"  >UP mini 2 </a></div>
+                                        </li>
+                                        <li>
+                                            <div class="figure figure-thumb"> <a href="https://www.up3d.com/?r=plus"><img src="https://cn.up3d.com/upload/static/printer3.png"   alt="UP Plus" width="160" style="height:90px;" ></a> </div>
+                                            <div class="title"><a href="https://www.up3d.com/?r=plus"  >UP Plus 2 </a></div>
+                                        </li>
+                                        <li>
+                                            <div class="figure figure-thumb"> <a href="https://www.up3d.com/?r=mini"  ><img src="https://cn.up3d.com/upload/static/printer2.png"   alt="UP mini " width="160"></a> </div>
+                                            <div class="title"><a href="https://www.up3d.com/?r=mini"  >UP mini </a></div>
+                                        </li>
+                                 </ul>
 							</div>
 						</div> <!--主导航下拉显示层 end--></li>
 					<li class="nav-item"><a class="link" href="https://www.up3d.com/?r=printers"><span
