--- a/download.html
+++ b/download.html
@@ -119,6 +119,26 @@
 					<div class="doclist" id="windownloadlist">
 						<li><div class="txt">
 								<a target=_blank
+									href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x64_1.4.3.1.zip">UP
+									Studio For Windows x64 Version:1.4.3.1</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x64_1.4.3.1.zip"><img
+									src="https://www.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank
+									href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x86_1.4.3.1.zip">UP
+									Studio For Windows x86 Version:1.4.3.1</a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x86_1.4.3.1.zip"><img
+									src="https://www.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank
 									href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x64_1.4.2.1.zip">UP
 									Studio For Windows x64 Version:1.4.2.1</a>
 							</div>
