--- a/support_cn.html
+++ b/support_cn.html
@@ -123,6 +123,26 @@
 					<div class="doclist" id="windownloadlist">
 						<li><div class="txt">
 								<a target=_blank
+									href="https://cn.up3d.com/downloads/UP_Studio_x64.1.5.0.3_Beta.zip">UP
+									Studio For Windows x64 Version:1.5.0.3 <b>Beta</b></a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="https://cn.up3d.com/downloads/UP_Studio_x64.1.5.0.3_Beta.zip"><img
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank
+									href="https://cn.up3d.com/downloads/UP_Studio_x86.1.5.0.3_Beta.zip">UP
+									Studio For Windows x86 Version:1.5.0.3 <b>Beta</b></a>
+							</div>
+							<div class="ico">
+								<a target=_blank
+									href="https://cn.up3d.com/downloads/UP_Studio_x86.1.5.0.3_Beta.zip"><img
+									src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank
 									href="https://cn.up3d.com/downloads/UP_Studio_x64_1.4.3.1.zip">UP
 									Studio For Windows x64 Version:1.4.3.1</a>
 							</div>
