--- a/download_cn.html
+++ b/download_cn.html
@@ -110,6 +110,18 @@
 					</div>
 					<div class="doclist" id="windownloadlist">
 						<li><div class="txt">
+								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x64_1.5.1.1.zip"><b>UP Studio For Windows x64 Version:1.5.1.1</b></a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x64_1.5.1.1.zip"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x86_1.5.1.1.zip"><b>UP Studio For Windows x86 Version:1.5.1.1</b></a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x86_1.5.1.1.zip"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
 								<a target=_blank
 									href="https://cn.up3d.com/downloads/UP_Studio_x64.1.5.0.3_Beta.zip">UP
 									Studio For Windows x64 Version:1.5.0.3 <b>Beta</b></a>
