--- a/download_cn.html
+++ b/download_cn.html
@@ -553,6 +553,9 @@
 						<a href="https://www.up3d.com/?r=about/milestones">Milestones</a>
 					</dd>
 				</dl>
+				<dl class="col-links ">
+					<dt><a href="https://www.up3d.com/privacy/" target="_blank">Privacy Policy </a></dt>         
+				</dl>
 				<div class="col-contact">
 					<div class="icon_email">
 						<div class="share">
