--- a/support_cn.html
+++ b/support_cn.html
@@ -122,6 +122,18 @@
 					</div>
 					<div class="doclist" id="windownloadlist">
 						<li><div class="txt">
+								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x64_1.6.0.9_Beta.zip">UP Studio For Windows x64 Version:1.6.0.9 <b>Beta</b></a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x64_1.6.0.9_Beta.zip"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x86_1.6.0.9_Beta.zip">UP Studio For Windows x86 Version:1.6.0.9 <b>Beta</b></a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x86_1.6.0.9_Beta.zip"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
 								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x64_1.5.1.1.zip"><b>UP Studio For Windows x64 Version:1.5.1.1</b></a>
 							</div>
 							<div class="ico">
