--- a/download.html
+++ b/download.html
@@ -118,6 +118,18 @@
 					</div>
 					<div class="doclist" id="windownloadlist">
 						<li><div class="txt">
+								<a target=_blank href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x64_1.6.1.0_Beta.zip">UP Studio For Windows x64 Version:1.6.1.0 <b>Beta</b></a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x64_1.6.1.0_Beta.zip"><img src="https://www.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x86_1.6.1.0_Beta.zip">UP Studio For Windows x86 Version:1.6.1.0 <b>Beta</b></a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x86_1.6.1.0_Beta.zip"><img src="https://www.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
 								<a target=_blank href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x64_1.6.0.9_Beta.zip">UP Studio For Windows x64 Version:1.6.0.9 <b>Beta</b></a>
 							</div>
 							<div class="ico">
@@ -354,12 +366,12 @@
 					<div class="doclist" id="macdownloadlist">
 						<li><div class="txt">
 								<a target=_blank
-									href="https://itunes.apple.com/cn/app/up-studio/id1119477741?mt=12">UP
+									href="https://itunes.apple.com/app/up-studio/id1119477741?mt=12">UP
 									Studio For MAC OSX</a>
 							</div>
 							<div class="ico">
 								<a target=_blank
-									href="https://itunes.apple.com/cn/app/up-studio/id1119477741?mt=12"><img
+									href="https://itunes.apple.com/app/up-studio/id1119477741?mt=12"><img
 									src="https://www.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 						
