--- a/download_cn.html
+++ b/download_cn.html
@@ -110,6 +110,18 @@
 					</div>
 					<div class="doclist" id="windownloadlist">
 						<li><div class="txt">
+								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x64_1.6.1.2.zip">UP Studio For Windows x64 Version:1.6.1.2</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x64_1.6.1.2.zip"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x86_1.6.1.2.zip">UP Studio For Windows x86 Version:1.6.1.2</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x86_1.6.1.2.zip"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
 								<a target=_blank href="https://cn.up3d.com/downloads/UP_Studio_x64_1.6.1.1_Beta.zip">UP Studio For Windows x64 Version:1.6.1.1 <b>Beta</b></a>
 							</div>
 							<div class="ico">
