add download links for LKD files.

--- a/download.html
+++ b/download.html
@@ -385,43 +385,57 @@
 				<div class="downloadlist">
 					<div class="tile mac">
 						<div class="tile-txt">MAC</div>
-
 					</div>
 					<div class="doclist" id="macdownloadlist">
 						<li><div class="txt">
-								<a target=_blank
-									href="https://itunes.apple.com/app/up-studio/id1119477741?mt=12">UP
-									Studio For MAC OSX</a>
+								<a target=_blank href="https://itunes.apple.com/app/up-studio/id1119477741?mt=12">UP Studio For MAC OSX</a>
 							</div>
 							<div class="ico">
-								<a target=_blank
-									href="https://itunes.apple.com/app/up-studio/id1119477741?mt=12"><img
-									src="https://www.up3d.com/resource/images/ico_down.png"></a>
-							</div></li>
-						
-						<li><div class="txt">
-								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/mac/5-15042F94231.zip">UP
-									2.15 Software for Mac Version:2.15</a>
-							</div>
-							<div class="ico">
-								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/mac/5-15042F94231.zip"><img
-									src="https://www.up3d.com/resource/images/ico_down.png"></a>
+								<a target=_blank href="https://itunes.apple.com/app/up-studio/id1119477741?mt=12"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
-								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/mac/1-141114095611.zip">UP!
-									Installation Executable For Mac Version:2.13</a>
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1600.LKD">LKD file For UP Studio on MAC Version:1.6</a>
 							</div>
 							<div class="ico">
-								<a target=_blank
-									href="http://up3d-dev.github.io/downloads/desktop/mac/1-141114095611.zip"><img
-									src="https://www.up3d.com/resource/images/ico_down.png"></a>
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1600.LKD"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
 							</div></li>
-
+						<li><div class="txt">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1502.LKD">LKD file For UP Studio on MAC Version:1.5.0.2</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1502.LKD"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1500.LKD">LKD file For UP Studio on MAC Version:1.5</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1500.LKD"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1401.LKD">LKD file For UP Studio on MAC Version:1.4.0.1</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1401.LKD"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1400.LKD">LKD file For UP Studio on MAC Version:1.4</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1400.LKD"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank href="http://up3d-dev.github.io/downloads/desktop/mac/5-15042F94231.zip">UP 2.15 Software for Mac Version:2.15</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="http://up3d-dev.github.io/downloads/desktop/mac/5-15042F94231.zip"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank href="http://up3d-dev.github.io/downloads/desktop/mac/1-141114095611.zip">UP! Installation Executable For Mac Version:2.13</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="http://up3d-dev.github.io/downloads/desktop/mac/1-141114095611.zip"><img	src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
 					</div>
-
 				</div>
 
 				<div class="downloadlist">
