--- a/download.html
+++ b/download.html
@@ -144,6 +144,12 @@
 								<a target=_blank href="https://itunes.apple.com/app/up-studio/id1119477741?mt=12"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1700.LKD">LKD file For UP Studio on MAC Version:1.7</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1700.LKD"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
 								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1600.LKD">LKD file For UP Studio on MAC Version:1.6</a>
 							</div>
 							<div class="ico">
