--- a/support_cn.html
+++ b/support_cn.html
@@ -167,6 +167,12 @@
 								<a target=_blank href="https://itunes.apple.com/cn/app/up-studio/id1119477741?mt=12"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
+								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV1700.LKD">LKD file For UP Studio on MAC Version:1.7</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV1700.LKD"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
 								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV1600.LKD">LKD file For UP Studio on MAC Version:1.6</a>
 							</div>
 							<div class="ico">
