--- a/support.html
+++ b/support.html
@@ -91,7 +91,7 @@
 			<area shape="rect" coords="311,317,595,505"
 				href="https://www.up3d.com/?r=support/service">
 			<area shape="rect" coords="893,96,1136,240"
-				href="mailto:support@pp3dp.com" target="_blank">
+				href="mailto:support@up3d.com" target="_blank">
 		</map>
 		<div class="container supbox">
 			<h2>Resource Download Center</h2>
@@ -399,12 +399,12 @@
 				<div class="col-contact">
 					<div class="icon_email">
 						<div class="share">
-							<a href="mailto:support@pp3dp.com"><img
+							<a href="mailto:support@up3d.com"><img
 								src="https://www.up3d.com/resource/images/weblogo_email.png"
 								alt=""></a>
 						</div>
 						<div class="share">
-							<a href="mailto:support@pp3dp.com">support@pp3dp.com</a>
+							<a href="mailto:support@up3d.com">support@up3d.com</a>
 						</div>
 					</div>
 					<p class="phone">&nbsp;</p>
