add lkd files v1.9 v1.801 v1.8

--- a/support_cn.html
+++ b/support_cn.html
@@ -167,6 +167,24 @@
 								<a target=_blank href="https://itunes.apple.com/cn/app/up-studio/id1119477741?mt=12"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
+								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV1900.LKD">LKD file For UP Studio on MAC Version:1.9</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV1900.LKD"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV1801.LKD">LKD file For UP Studio on MAC Version:1.801</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV1801.LKD"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
+								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV1800.LKD">LKD file For UP Studio on MAC Version:1.8</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV1800.LKD"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
 								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV1700.LKD">LKD file For UP Studio on MAC Version:1.7</a>
 							</div>
 							<div class="ico">
