--- a/support.html
+++ b/support.html
@@ -162,6 +162,24 @@
 								<a target=_blank href="https://itunes.apple.com/app/up-studio/id1119477741?mt=12"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1900.LKD">LKD file For UP Studio on MAC Version:1.9</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1900.LKD"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1801.LKD">LKD file For UP Studio on MAC Version:1.801</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1801.LKD"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1800.LKD">LKD file For UP Studio on MAC Version:1.8</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1800.LKD"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
+						<li><div class="txt">
 								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1700.LKD">LKD file For UP Studio on MAC Version:1.7</a>
 							</div>
 							<div class="ico">
