--- a/download_cn.html
+++ b/download_cn.html
@@ -101,8 +101,8 @@
 				                  <ul>
 				                    <div class="upsoft_l txtleft">UP Studio Version:1.9.1.3</div>
 				                    <div class="upsoft_r txtright">
-				                    	<span><a href="https://cn.up3d.com/downloads/UP_Studio_x64_1.9.1.3.zip" class="upsoft_down">x64</a></span>&nbsp;
-				                    	<span><a href="https://cn.up3d.com/downloads/UP_Studio_x86_1.9.1.3.zip" class="upsoft_down">x86</a></span>
+				                    	<span><a href="http://cn.up3d.com:90/downloads/UP_Studio_x64_1.9.1.3.zip" class="upsoft_down">x64</a></span>&nbsp;
+				                    	<span><a href="http://cn.up3d.com:90/downloads/UP_Studio_x86_1.9.1.3.zip" class="upsoft_down">x86</a></span>
 				                    </div>
 				                  </ul>
 				                </div>
@@ -117,8 +117,8 @@
 				                  <ul>
 				                    <div class="upsoft_l txtleft">UP Studio Version:1.9.0.3</div>
 				                    <div class="upsoft_r txtright">
-				                    	<span><a href="https://cn.up3d.com/downloads/UP_Studio_x64_1.9.0.3_Beta.zip" class="upsoft_down">x64</a></span>&nbsp;
-				                    	<span><a href="https://cn.up3d.com/downloads/UP_Studio_x86_1.9.0.3_Beta.zip" class="upsoft_down">x86</a></span>
+				                    	<span><a href="http://cn.up3d.com:90/downloads/UP_Studio_x64_1.9.0.3_Beta.zip" class="upsoft_down">x64</a></span>&nbsp;
+				                    	<span><a href="http://cn.up3d.com:90/downloads/UP_Studio_x86_1.9.0.3_Beta.zip" class="upsoft_down">x86</a></span>
 				                    </div>
 				                  </ul>
 				                  <div><br/></div>
@@ -132,7 +132,7 @@
 				            </div>
 				            <div class="panel panel-default">
 				             <div id="collapseThree" class="panel-collapse in collapse" role="tabpanel" aria-labelledby="headingThree">
-				                <div class="panel-body" > <a class="collapsed upsoft_down" href="http://cn.up3d.com/downloads/" target="_blank"> All Versions  <i class="fa fa-angle-double-right" aria-hidden="true"></i>  </a> </div>
+				                <div class="panel-body" > <a class="collapsed upsoft_down" href="http://cn.up3d.com:90/downloads/" target="_blank"> All Versions  <i class="fa fa-angle-double-right" aria-hidden="true"></i>  </a> </div>
 				              </div> 
 				            </div>
 				          </div>
