Add UP Studio v2.0.0.7 BETA.

--- a/support.html
+++ b/support.html
@@ -119,7 +119,6 @@
 				                </div>
 				              </div>
 				            </div>
-				            <!-- 
 				            <div class="panel panel-default" style="margin-bottom:20px;">
 				              <div class="panel-heading" role="tab" id="headingTwo">
 				                <h4 class="panel-title">Advanced Beta</h4>
@@ -127,10 +126,10 @@
 				              <div id="collapseTwo" class="panel-collapse in collapse" role="tabpanel" aria-labelledby="headingTwo">
 				                <div class="panel-body">
 				                  <ul>
-				                    <div class="upsoft_l txtleft">UP Studio Version:1.9.0.3</div>
+				                    <div class="upsoft_l txtleft">UP Studio Version:2.0.0.7</div>
 				                    <div class="upsoft_r txtright">
-				                    	<span><a href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x64_1.9.0.3_Beta.zip" class="upsoft_down">x64</a></span>&nbsp;
-				                    	<span><a href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x86_1.9.0.3_Beta.zip" class="upsoft_down">x86</a></span>
+				                    	<span><a href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x64_2.0.0.7Beta.zip" class="upsoft_down">x64</a></span>&nbsp;
+				                    	<span><a href="https://s3-us-west-1.amazonaws.com/up3d/downloads/UP_Studio_x86_2.0.0.7Beta.zip" class="upsoft_down">x86</a></span>
 				                    </div>
 				                  </ul>
 				                  <div><br/></div>
@@ -142,7 +141,6 @@
 				                </div>
 				              </div>
 				            </div>
-				             -->
 				            <div class="panel panel-default">
 				             <div id="collapseThree" class="panel-collapse in collapse" role="tabpanel" aria-labelledby="headingThree">
 				                <div class="panel-body" > <a class="collapsed upsoft_down" href="http://cn.up3d.com:90/downloads/" target="_blank"> All Versions  <i class="fa fa-angle-double-right" aria-hidden="true"></i>  </a> </div>
