add LKD file v2.0.0.2

--- a/download_cn.html
+++ b/download_cn.html
@@ -151,10 +151,17 @@
 								<a target=_blank href="https://itunes.apple.com/cn/app/up-studio/id1119477741?mt=12"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 							<li><div class="txt">
+								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV2001.LKD">LKD file For UP Studio on MAC Version:2.0.0.1</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV2001.LKD"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
 								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV2000.LKD">LKD file For UP Studio on MAC Version:2.0.0.0</a>
 							</div>
 							<div class="ico">
 								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV2000.LKD"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
 							<li><div class="txt">
 								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV1901.LKD">LKD file For UP Studio on MAC Version:1.9.0.1</a>
 							</div>
