--- a/support.html
+++ b/support.html
@@ -162,10 +162,18 @@
 								<a target=_blank href="https://itunes.apple.com/app/up-studio/id1119477741?mt=12"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
 							</div></li>
 						<li><div class="txt">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV2001.LKD">LKD file For UP Studio on MAC Version:2.0.0.1</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV2001.LKD"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div>
+						</li>
+						<li><div class="txt">
 								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV2000.LKD">LKD file For UP Studio on MAC Version:2.0.0.0</a>
 							</div>
 							<div class="ico">
 								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV2000.LKD"><img src="https://d1wbqe76zurb5f.cloudfront.net/resource/images/ico_down.png"></a>
+							</div></li>
 						<li><div class="txt">
 								<a target=_blank href="https://d1wbqe76zurb5f.cloudfront.net/resource/client/TierTimeV1901.LKD">LKD file For UP Studio on MAC Version:1.9.0.1</a>
 							</div>
